# Horus

./: CMakeLists.txt  README.md  boot_sleepmode.sh  daily_routine.sh  monitor_cpu.sh
config/: horus.conf
scripts/: deploy_service.sh
src/: main.cpp
src/sensors/BME280/: bme280.cpp  bme280.hpp
src/sensors/Camera/: Camera.cpp  Camera.hpp
src/utils/: FileSystem.cpp  FileSystem.hpp
